--- a/pages/video-detail.html
+++ b/pages/video-detail.html
@@ -25,6 +25,26 @@
                             <polygon points="23,18 23,42 42,30" fill="white"/>
                         </svg>
                     </div>
+                    <div class="video-controls">
+                        <button class="control-btn pause-btn" title="暂停">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                <rect x="6" y="4" width="4" height="16"/>
+                                <rect x="14" y="4" width="4" height="16"/>
+                            </svg>
+                        </button>
+                        <div class="control-right">
+                            <button class="control-btn mute-btn" title="静音">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
+                                </svg>
+                            </button>
+                            <button class="control-btn fullscreen-btn" title="全屏">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
                 </div>
                 <h3>湿度测试V1D4+CM</h3>
             </div>
@@ -37,6 +57,26 @@
                             <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
                             <polygon points="23,18 23,42 42,30" fill="white"/>
                         </svg>
+                    </div>
+                    <div class="video-controls">
+                        <button class="control-btn pause-btn" title="暂停">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                <rect x="6" y="4" width="4" height="16"/>
+                                <rect x="14" y="4" width="4" height="16"/>
+                            </svg>
+                        </button>
+                        <div class="control-right">
+                            <button class="control-btn mute-btn" title="静音">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
+                                </svg>
+                            </button>
+                            <button class="control-btn fullscreen-btn" title="全屏">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <h3>UZIN PE 360 PLUS</h3>
@@ -51,6 +91,26 @@
                             <polygon points="23,18 23,42 42,30" fill="white"/>
                         </svg>
                     </div>
+                    <div class="video-controls">
+                        <button class="control-btn pause-btn" title="暂停">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                <rect x="6" y="4" width="4" height="16"/>
+                                <rect x="14" y="4" width="4" height="16"/>
+                            </svg>
+                        </button>
+                        <div class="control-right">
+                            <button class="control-btn mute-btn" title="静音">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
+                                </svg>
+                            </button>
+                            <button class="control-btn fullscreen-btn" title="全屏">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
                 </div>
                 <h3>UZIN PE 460</h3>
             </div>
@@ -63,6 +123,26 @@
                             <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
                             <polygon points="23,18 23,42 42,30" fill="white"/>
                         </svg>
+                    </div>
+                    <div class="video-controls">
+                        <button class="control-btn pause-btn" title="暂停">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                <rect x="6" y="4" width="4" height="16"/>
+                                <rect x="14" y="4" width="4" height="16"/>
+                            </svg>
+                        </button>
+                        <div class="control-right">
+                            <button class="control-btn mute-btn" title="静音">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
+                                </svg>
+                            </button>
+                            <button class="control-btn fullscreen-btn" title="全屏">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <h3>UZIN PE 280</h3>
@@ -77,6 +157,26 @@
                             <polygon points="23,18 23,42 42,30" fill="white"/>
                         </svg>
                     </div>
+                    <div class="video-controls">
+                        <button class="control-btn pause-btn" title="暂停">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                <rect x="6" y="4" width="4" height="16"/>
+                                <rect x="14" y="4" width="4" height="16"/>
+                            </svg>
+                        </button>
+                        <div class="control-right">
+                            <button class="control-btn mute-btn" title="静音">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
+                                </svg>
+                            </button>
+                            <button class="control-btn fullscreen-btn" title="全屏">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
                 </div>
                 <h3>PE480+PE280</h3>
             </div>
@@ -90,6 +190,26 @@
                             <polygon points="23,18 23,42 42,30" fill="white"/>
                         </svg>
                     </div>
+                    <div class="video-controls">
+                        <button class="control-btn pause-btn" title="暂停">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                <rect x="6" y="4" width="4" height="16"/>
+                                <rect x="14" y="4" width="4" height="16"/>
+                            </svg>
+                        </button>
+                        <div class="control-right">
+                            <button class="control-btn mute-btn" title="静音">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
+                                </svg>
+                            </button>
+                            <button class="control-btn fullscreen-btn" title="全屏">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
                 </div>
                 <h3>PE360+RR203+NC182</h3>
             </div>
@@ -102,6 +222,26 @@
                             <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
                             <polygon points="23,18 23,42 42,30" fill="white"/>
                         </svg>
+                    </div>
+                    <div class="video-controls">
+                        <button class="control-btn pause-btn" title="暂停">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                <rect x="6" y="4" width="4" height="16"/>
+                                <rect x="14" y="4" width="4" height="16"/>
+                            </svg>
+                        </button>
+                        <div class="control-right">
+                            <button class="control-btn mute-btn" title="静音">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
+                                </svg>
+                            </button>
+                            <button class="control-btn fullscreen-btn" title="全屏">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <h3>KR516</h3>
@@ -123,28 +263,143 @@
 
         // 视频播放功能
         document.querySelectorAll('.video-item').forEach(item => {
-            item.addEventListener('click', function() {
-                const video = this.querySelector('video');
+            const video = item.querySelector('video');
+            const thumbnail = item.querySelector('.video-thumbnail');
+            const playButton = item.querySelector('.play-button');
+            const pauseBtn = item.querySelector('.pause-btn');
+            const muteBtn = item.querySelector('.mute-btn');
+            const fullscreenBtn = item.querySelector('.fullscreen-btn');
+
+            // 点击视频区域播放/暂停
+            thumbnail.addEventListener('click', function(e) {
+                // 如果点击的是控制按钮，不处理
+                if (e.target.closest('.control-btn')) return;
+
                 if (video.paused) {
                     // 暂停所有其他视频
                     document.querySelectorAll('video').forEach(v => {
-                        if (v !== video) v.pause();
+                        if (v !== video) {
+                            v.pause();
+                            v.closest('.video-thumbnail').classList.remove('playing');
+                        }
                     });
                     video.play();
-                    this.querySelector('.play-button').style.display = 'none';
                 } else {
                     video.pause();
-                    this.querySelector('.play-button').style.display = 'flex';
                 }
             });
 
-            const video = item.querySelector('video');
-            video.addEventListener('pause', function() {
-                item.querySelector('.play-button').style.display = 'flex';
+            // 暂停/播放按钮
+            pauseBtn.addEventListener('click', function(e) {
+                e.stopPropagation();
+                if (video.paused) {
+                    video.play();
+                } else {
+                    video.pause();
+                }
             });
+
+            // 静音按钮
+            muteBtn.addEventListener('click', function(e) {
+                e.stopPropagation();
+                video.muted = !video.muted;
+                updateMuteIcon();
+            });
+
+            // 全屏按钮
+            fullscreenBtn.addEventListener('click', function(e) {
+                e.stopPropagation();
+                if (!document.fullscreenElement) {
+                    if (thumbnail.requestFullscreen) {
+                        thumbnail.requestFullscreen();
+                    } else if (thumbnail.webkitRequestFullscreen) {
+                        thumbnail.webkitRequestFullscreen();
+                    } else if (thumbnail.mozRequestFullScreen) {
+                        thumbnail.mozRequestFullScreen();
+                    } else if (thumbnail.msRequestFullscreen) {
+                        thumbnail.msRequestFullscreen();
+                    }
+                } else {
+                    if (document.exitFullscreen) {
+                        document.exitFullscreen();
+                    } else if (document.webkitExitFullscreen) {
+                        document.webkitExitFullscreen();
+                    } else if (document.mozCancelFullScreen) {
+                        document.mozCancelFullScreen();
+                    } else if (document.msExitFullscreen) {
+                        document.msExitFullscreen();
+                    }
+                }
+            });
+
+            // 更新暂停按钮图标
+            function updatePauseIcon() {
+                if (video.paused) {
+                    pauseBtn.innerHTML = `<svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                        <polygon points="8,5 8,19 19,12"/>
+                    </svg>`;
+                    pauseBtn.title = '播放';
+                } else {
+                    pauseBtn.innerHTML = `<svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                        <rect x="6" y="4" width="4" height="16"/>
+                        <rect x="14" y="4" width="4" height="16"/>
+                    </svg>`;
+                    pauseBtn.title = '暂停';
+                }
+            }
+
+            // 更新静音按钮图标
+            function updateMuteIcon() {
+                if (video.muted) {
+                    muteBtn.innerHTML = `<svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                        <path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"/>
+                    </svg>`;
+                    muteBtn.title = '取消静音';
+                } else {
+                    muteBtn.innerHTML = `<svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                        <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
+                    </svg>`;
+                    muteBtn.title = '静音';
+                }
+            }
+
+            // 更新全屏按钮图标
+            function updateFullscreenIcon() {
+                if (document.fullscreenElement === thumbnail) {
+                    fullscreenBtn.innerHTML = `<svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                        <path d="M5 16h3v3h2v-5H5v2zm3-8H5v2h5V5H8v3zm6 11h2v-3h3v-2h-5v5zm2-11V5h-2v5h5V8h-3z"/>
+                    </svg>`;
+                    fullscreenBtn.title = '退出全屏';
+                } else {
+                    fullscreenBtn.innerHTML = `<svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                        <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
+                    </svg>`;
+                    fullscreenBtn.title = '全屏';
+                }
+            }
+
+            // 视频事件监听
             video.addEventListener('play', function() {
-                item.querySelector('.play-button').style.display = 'none';
+                playButton.style.display = 'none';
+                thumbnail.classList.add('playing');
+                updatePauseIcon();
             });
+
+            video.addEventListener('pause', function() {
+                playButton.style.display = 'flex';
+                thumbnail.classList.remove('playing');
+                updatePauseIcon();
+            });
+
+            video.addEventListener('volumechange', function() {
+                updateMuteIcon();
+            });
+
+            // 全屏变化监听
+            document.addEventListener('fullscreenchange', updateFullscreenIcon);
+            document.addEventListener('webkitfullscreenchange', updateFullscreenIcon);
+            document.addEventListener('mozfullscreenchange', updateFullscreenIcon);
+            document.addEventListener('MSFullscreenChange', updateFullscreenIcon);
         });
     </script>
 </body>
